Página de ofertas

--- a/MVCUsuario-master/src/main/resources/templates/index.html
+++ b/MVCUsuario-master/src/main/resources/templates/index.html
@@ -14,13 +14,13 @@
         </div>
     </header>
 </div>
-<!--
+
 <div class="contenido">
     <div class="register">
         REGISTRARSE
     </div>
     <div class="encuesta">
-        <form name="formulario" action="#" method="POST" th:action="@{/applicant}" th:object="${applicant}">
+        <form name="formulario" action="#" method="POST">
             <div class="item">
                 <div class="formulario" id="nombre-form">
                     <label for="nombre">Nombre:</label>
@@ -54,7 +54,7 @@
         </form>
     </div>
 </div>
--->
+
 <footer>
     <p>Aplicaciones Java Sobre Web</p>
 </footer>
